更改了有错别字的t_qt字段，补上了漏掉的len字段（电影时长）

--- a/docs/字段.md
+++ b/docs/字段.md
@@ -54,7 +54,7 @@
 | t_hs | t_dark | 黑色电影
 | t_dp | t_short | 短片
 | t_jl | t_documentary | 纪录片
-| t_jt | t_others | 其他
+| t_qt | t_others | 其他
 | c_dl | c_Mainland | 大陆
 | c_mg | c_America | 美国
 | c_hg | c_Korea | 韩国
@@ -100,5 +100,5 @@
 | bof | boxoffice | 票房
 | da | mdate | 上映日期
 | cl |mclass | 电影类型
-
+| len | length | 电影时长
 
