去掉了一些字段

--- a/docs/字段.md
+++ b/docs/字段.md
@@ -73,6 +73,17 @@
 | c_ad | c_Australia | 澳大利亚
 | c_yl | c_Iran | 伊朗
 | c_qt | c_Others | 其他
+| bof | boxoffice | 票房
+| da | mdate | 上映日期
+| len | length | 电影时长
+| sc | score | 电影评分
+| sc_p | score_people | 评分人数
+
+
+# 下面这些字段是暂时放弃爬取了的，有时间再回头看
+
+| Hbase字段 | Hive字段 | 备注 |
+| ---------- | ------- | ----- |
 | j_gn  |j_gana	|戛纳获奖数目
 | j_wns | j_winisi	|威尼斯获奖数目
 | j_bl	|j_bolin	|柏林获奖数目
@@ -97,9 +108,3 @@
 | tn_gj	|tmnum_guoji	|国际提名总数
 | tn_hy	|tmnum_huayu	|华语提名总数
 | tn_el	|tmnum_else	|其他提名总数
-| bof | boxoffice | 票房
-| da | mdate | 上映日期
-| cl |mclass | 电影类型
-| len | length | 电影时长
-| sc | score | 电影评分
-| sc_p | score_people | 评分人数
