--- a/analyze/MySQL_prep.ipynb
+++ b/analyze/MySQL_prep.ipynb
@@ -31,16 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hadoop/.local/lib/python3.5/site-packages/pymysql/cursors.py:170: Warning: (1051, \"Unknown table 'comex.personas'\")\n",
+      "  result = self._query(query)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +102,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
