更新了MySQL建表语句

--- a/analyze/data_prep.ipynb
+++ b/analyze/data_prep.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_table_district_sql = '''create table district(city1 float,city2 float,city3 float,city float)'''"
+    "create_table_district_sql = '''create table district(city1 float,city2 float,city3 float,city4 float)'''"
    ]
   },
   {
@@ -2195,7 +2195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_relation_bet_age_and_class_sql = '''create table relation_bet_age_and_class(class string,under20 float,20to24 float,25to19 float,30to34 float,35to39 float,above40 float)'''"
+    "create_relation_bet_age_and_class_sql = '''create table relation_bet_age_and_class(class string,under20 float,20to24 float,25to29 float,30to34 float,35to39 float,above40 float)'''"
    ]
   },
   {
