更新了写进MySQL数据库的语句

--- a/analyze/data_prep.ipynb
+++ b/analyze/data_prep.ipynb
@@ -3707,309 +3707,73 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table personas --export-dir '/user/hive/warehouse/film44_after_prep' --fields-terminated-by ',';"
+    "#table1\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table district --export-dir '/user/hive/warehouse/district' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "# 用pandas查看一下"
+    "#table2\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table relation_bet_gen_and_bo --export-dir '/user/hive/warehouse/relation_bet_gen_and_bo' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#打开数据库连接\n",
-    "db= pymysql.connect(host=\"127.0.0.1\",user=\"root\",\n",
-    "     password=\"123456\",db=\"comex\",port=3306)"
+    "#table3\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table female_per_by_hyear --export-dir '/user/hive/warehouse/female_per_by_hyear' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "#table4\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table relation_bet_gen_and_class --export-dir '/user/hive/warehouse/relation_bet_gen_and_class' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#显示所有列\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "#显示所有行\n",
-    "pd.set_option('display.max_rows', None)"
+    "#table5\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table relation_bet_age_and_class --export-dir '/user/hive/warehouse/relation_bet_age_and_class' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sql = 'select * from personas'\n",
-    "pd = pd.read_sql(sql,db)"
+    "#table6\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table relation_bet_gen_and_class --export-dir '/user/hive/warehouse/relation_bet_gen_and_class' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>male</th>\n",
-       "      <th>female</th>\n",
-       "      <th>under20</th>\n",
-       "      <th>20to24</th>\n",
-       "      <th>25to29</th>\n",
-       "      <th>30to34</th>\n",
-       "      <th>35to39</th>\n",
-       "      <th>above40</th>\n",
-       "      <th>degree_high</th>\n",
-       "      <th>degree_low</th>\n",
-       "      <th>city1</th>\n",
-       "      <th>city2</th>\n",
-       "      <th>city3</th>\n",
-       "      <th>city4</th>\n",
-       "      <th>occupation_whitecollar</th>\n",
-       "      <th>occupation_student</th>\n",
-       "      <th>occupation_others</th>\n",
-       "      <th>preference_action</th>\n",
-       "      <th>preference_comedy</th>\n",
-       "      <th>preference_romance</th>\n",
-       "      <th>occupation_science</th>\n",
-       "      <th>occupation_animate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>c2ea3dd867e9943bec89008ac3852cca</td>\n",
-       "      <td>八恶人</td>\n",
-       "      <td>0.696</td>\n",
-       "      <td>0.304</td>\n",
-       "      <td>0.086</td>\n",
-       "      <td>0.326</td>\n",
-       "      <td>0.283</td>\n",
-       "      <td>0.131</td>\n",
-       "      <td>0.067</td>\n",
-       "      <td>0.107</td>\n",
-       "      <td>0.332</td>\n",
-       "      <td>0.668</td>\n",
-       "      <td>0.138</td>\n",
-       "      <td>0.491</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.231</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>c33b2c51d5cc8ebfce87dae8aac3f3f6</td>\n",
-       "      <td>乌龙特工</td>\n",
-       "      <td>0.708</td>\n",
-       "      <td>0.292</td>\n",
-       "      <td>0.106</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.268</td>\n",
-       "      <td>0.117</td>\n",
-       "      <td>0.075</td>\n",
-       "      <td>0.104</td>\n",
-       "      <td>0.267</td>\n",
-       "      <td>0.733</td>\n",
-       "      <td>0.141</td>\n",
-       "      <td>0.472</td>\n",
-       "      <td>0.169</td>\n",
-       "      <td>0.218</td>\n",
-       "      <td>0.38</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>c33ee9bd38bd25940cdf4b603b96a6d7</td>\n",
-       "      <td>相爱相亲</td>\n",
-       "      <td>0.393</td>\n",
-       "      <td>0.607</td>\n",
-       "      <td>0.059</td>\n",
-       "      <td>0.304</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.151</td>\n",
-       "      <td>0.093</td>\n",
-       "      <td>0.102</td>\n",
-       "      <td>0.631</td>\n",
-       "      <td>0.369</td>\n",
-       "      <td>0.167</td>\n",
-       "      <td>0.412</td>\n",
-       "      <td>0.194</td>\n",
-       "      <td>0.227</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.33</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>c343fe7fd3530ef2cc3e8016046c7642</td>\n",
-       "      <td>屏住呼吸</td>\n",
-       "      <td>0.631</td>\n",
-       "      <td>0.369</td>\n",
-       "      <td>0.116</td>\n",
-       "      <td>0.363</td>\n",
-       "      <td>0.236</td>\n",
-       "      <td>0.091</td>\n",
-       "      <td>0.079</td>\n",
-       "      <td>0.114</td>\n",
-       "      <td>0.281</td>\n",
-       "      <td>0.719</td>\n",
-       "      <td>0.164</td>\n",
-       "      <td>0.465</td>\n",
-       "      <td>0.172</td>\n",
-       "      <td>0.199</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>0.32</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>c3e8465a2641d7aa69aab8d45add78ba</td>\n",
-       "      <td>不期而遇</td>\n",
-       "      <td>0.393</td>\n",
-       "      <td>0.607</td>\n",
-       "      <td>0.105</td>\n",
-       "      <td>0.391</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.063</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.685</td>\n",
-       "      <td>0.315</td>\n",
-       "      <td>0.134</td>\n",
-       "      <td>0.401</td>\n",
-       "      <td>0.202</td>\n",
-       "      <td>0.263</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 id  name   male female under20 20to24 25to29  \\\n",
-       "0  c2ea3dd867e9943bec89008ac3852cca   八恶人  0.696  0.304   0.086  0.326  0.283   \n",
-       "1  c33b2c51d5cc8ebfce87dae8aac3f3f6  乌龙特工  0.708  0.292   0.106   0.33  0.268   \n",
-       "2  c33ee9bd38bd25940cdf4b603b96a6d7  相爱相亲  0.393  0.607   0.059  0.304   0.29   \n",
-       "3  c343fe7fd3530ef2cc3e8016046c7642  屏住呼吸  0.631  0.369   0.116  0.363  0.236   \n",
-       "4  c3e8465a2641d7aa69aab8d45add78ba  不期而遇  0.393  0.607   0.105  0.391   0.26   \n",
-       "\n",
-       "  30to34 35to39 above40 degree_high degree_low  city1  city2  city3  city4  \\\n",
-       "0  0.131  0.067   0.107       0.332      0.668  0.138  0.491   0.14  0.231   \n",
-       "1  0.117  0.075   0.104       0.267      0.733  0.141  0.472  0.169  0.218   \n",
-       "2  0.151  0.093   0.102       0.631      0.369  0.167  0.412  0.194  0.227   \n",
-       "3  0.091  0.079   0.114       0.281      0.719  0.164  0.465  0.172  0.199   \n",
-       "4   0.11  0.063    0.07       0.685      0.315  0.134  0.401  0.202  0.263   \n",
-       "\n",
-       "  occupation_whitecollar occupation_student occupation_others  \\\n",
-       "0                   0.41               0.13              0.46   \n",
-       "1                   0.38               0.11              0.51   \n",
-       "2                   0.49               0.18              0.33   \n",
-       "3                   0.32               0.16              0.52   \n",
-       "4                   0.31                0.2              0.49   \n",
-       "\n",
-       "  preference_action preference_comedy preference_romance occupation_science  \\\n",
-       "0              0.32              0.11               0.27               0.18   \n",
-       "1              0.32              0.11               0.27               0.18   \n",
-       "2              0.46              0.12               0.19               0.07   \n",
-       "3              0.32              0.11               0.27               0.18   \n",
-       "4              0.44              0.14               0.21               0.07   \n",
-       "\n",
-       "  occupation_animate  \n",
-       "0               0.05  \n",
-       "1               0.05  \n",
-       "2               0.06  \n",
-       "3               0.05  \n",
-       "4               0.05  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "pd.head(5)"
+    "#table7\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table relation_bet_degree_and_class --export-dir '/user/hive/warehouse/relation_bet_degree_and_class' --fields-terminated-by ',';"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#table8\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table gross_boxo_and_top_boxo_changes --export-dir '/user/hive/warehouse/gross_boxo_and_top_boxo_changes' --fields-terminated-by ',';"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#table9\n",
+    "bin/sqoop export --connect jdbc:mysql://localhost:3306/comex --username root --password 123456 --table relation_among_sdate_class_boxo --export-dir '/user/hive/warehouse/relation_among_sdate_class_boxo' --fields-terminated-by ',';"
+   ]
   }
  ],
  "metadata": {
