--- a/analyze/data_prep.ipynb
+++ b/analyze/data_prep.ipynb
@@ -257,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "district_sql = '''SELECT (t2.v / t4.s) * 100.0,(t6.v / t8.s) * 100.0,(t10.v / t12.s) * 100.0,(t14.v / t16.s) * 100.0   FROM (SELECT SUM(t1.city1) AS v FROM film44 t1) t2 JOIN (SELECT count(t3.city1) as s FROM film44 t3) t4 JOIN (SELECT SUM(t5.city2) AS v FROM film44 t5) t6 JOIN (SELECT count(t7.city2) as s FROM film44 t7) t8 JOIN (SELECT SUM(t9.city3) AS v FROM film44 t9 WHERE t9.t_history=1) t10 JOIN (SELECT count(t11.25to29) as s FROM film44 t11) t12 JOIN (SELECT SUM(t13.city3) AS v FROM film44 t13) t14 JOIN (SELECT count(t15.city4) as s FROM film44 t15) t16'''"
+    "district_sql = '''SELECT (t2.v / t4.s) * 100.0,(t6.v / t8.s) * 100.0,(t10.v / t12.s) * 100.0,(t14.v / t16.s) * 100.0   FROM (SELECT SUM(t1.city1) AS v FROM film44 t1) t2 JOIN (SELECT count(t3.city1) as s FROM film44 t3) t4 JOIN (SELECT SUM(t5.city2) AS v FROM film44 t5) t6 JOIN (SELECT count(t7.city2) as s FROM film44 t7) t8 JOIN (SELECT SUM(t9.city3) AS v FROM film44 t9) t10 JOIN (SELECT count(t11.city3) as s FROM film44 t11) t12 JOIN (SELECT SUM(t13.city4) AS v FROM film44 t13) t14 JOIN (SELECT count(t15.city4) as s FROM film44 t15) t16'''"
    ]
   },
   {
